--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ form {
 }
 
 input {
-    width: 100%;
+    width: 70%;
     padding: 10px;
     margin-bottom: 15px;
     box-sizing: border-box;
@@ -37,8 +37,9 @@ input {
 }
 
 button {
-    width: 100%;
+    width: 70%;
     padding: 10px;
+    margin: 3px;
     background: #3498db;
     color: #fff;
     border: none;
