--- a/style.css
+++ b/style.css
@@ -13,12 +13,12 @@ body {
 
 h1 {
     color: #166295;
-    margin-bottom: 20px;
+    margin-bottom: 20px;    
 }
 
 form {
     max-width: 400px;
-    width: 100%;
+    width: 80%;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
@@ -34,6 +34,7 @@ input {
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
+    
 }
 
 button {
@@ -74,7 +75,7 @@ img {
     margin: 0 auto; /* Center the image within the frame */
 }
 
-#home, #sch, #rt {
+#home, #sch, #rt, #pr, #pgm, #cts, #reg2 {
     display: none;
 }
 
