--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ img {
 
 .image-frame {
     max-width: 70%;
+    max-height: 20%;
     margin: 0 auto; /* Center the frame on the page */
     border: 3px solid #dcd8d8;
     padding: 1px;
@@ -79,3 +80,9 @@ img {
     display: none;
 }
 
+.back {
+    position: fixed;
+    bottom: 20px;  /* Adjust this value as needed */
+    left: 50%;
+    transform: translateX(-50%);
+}
