zoom in pictures

--- a/style.css
+++ b/style.css
@@ -75,3 +75,9 @@ img {
     display: block;
     margin: 0 auto; /* Center the image within the frame */
 }
+
+.zoomable-image {
+    touch-action: manipulation;
+    max-width: 100%;
+    height: auto;
+}
