--- a/style.css
+++ b/style.css
@@ -80,4 +80,5 @@ img {
     touch-action: manipulation;
     max-width: 100%;
     height: auto;
+    -webkit-overflow-scrolling: touch; /* Enable touch scrolling on iOS devices */
 }
