--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ img {
     border: 3px solid #dcd8d8;
     padding: 1px;
     border-radius: 8px;
-    overflow: hidden;
+    overflow: auto; /* Allow scrolling within the frame */
 }
 
 .image-frame img {
@@ -77,5 +77,7 @@ img {
 }
 
 .zoomable-image {
+    width: 100%; /* Occupy the full width of the container */
+    height: auto;
     touch-action: pinch-zoom;
 }
