--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
     font-family: 'Arial', sans-serif;
     color: #333;
-    background: #f5f5f5;
+    background: #ffffff;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -22,7 +22,7 @@ form {
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
-    background: #fff;
+    background: #695f5f;
     box-sizing: border-box;
 }
 
@@ -55,7 +55,7 @@ button:hover {
 }
 
 img {
-    max-width: 70%;
+    max-width: 100%;
     height: auto;
 }
 
@@ -63,7 +63,7 @@ img {
     max-width: 70%;
     max-height: 20%;
     margin: 0 auto; /* Center the frame on the page */
-    border: 3px solid #dcd8d8;
+    border: 3px solid #a66060;
     padding: 1px;
     border-radius: 8px;
     overflow: auto; /* Allow scrolling within the frame */
