--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@ body {
 }
 
 h1 {
-    color: #166295;
-    margin-bottom: 20px;    
+    color: #000000;
+    margin-bottom: 20px;  
+    align-items: center;  
 }
 
 form {
@@ -61,9 +62,9 @@ img {
 
 .image-frame {
     max-width: 70%;
-    max-height: 20%;
+    max-height: 10%;
     margin: 0 auto; /* Center the frame on the page */
-    border: 3px solid #a66060;
+    border: 3px solid #0f96a5;
     padding: 1px;
     border-radius: 8px;
     overflow: auto; /* Allow scrolling within the frame */
