--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
     color: #333;
     background: #ffffff;
     display: flex;
-    flex-direction: column;
     align-items: center;
     height: 100vh;
     margin: 0;
@@ -53,6 +52,12 @@ button {
 
 button:hover {
     background: #2980b9;
+}
+
+.button-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px; /* Adjust as needed */
 }
 
 img {
