--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 
 body {
     text-align: center;
+    color: var(--tg-theme-text-color);
+    background: var(--tg-theme-bg-color);
 }
 
 
@@ -19,8 +21,8 @@ button {
     width: 90%;
     padding: 10px;
     margin: 5px;
-    background: #3498db;
-    color: #fff;
+    background: var(--tg-theme-button-color);
+    color: var(--tg-theme-button-text-color);
     border: none;
     border-radius: 4px;
     font-size: 18px;
