--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ label {
 }
 
 #cont {
-    border: 2px solid var(--tg-theme-text-color);
+    border: 2px solid rgb(228, 1, 1);
     padding: 5px;
     border-radius: 3px; 
     display: flex; 
