--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 body {
     text-align: center;
     color: var(--tg-theme-text-color);
-    background: var(--tg-theme-bg-color);
+    /* background: var(--tg-theme-bg-color); */
+    background: red;
 }
 
 h1 {
@@ -51,8 +52,8 @@ button {
     width: 90%;
     padding: 10px;
     margin: 5px;
-    background: var(--tg-theme-button-color);
-    color: var(--tg-theme-button-text-color);
+    /* background: var(--tg-theme-button-color);
+    color: var(--tg-theme-button-text-color); */
     border: none;
     border-radius: 4px;
     font-size: 18px;
@@ -71,6 +72,17 @@ button:hover {
     max-width: 90%;
     margin: 0 auto;
     margin-top: 20px;
+}
+
+#back {
+    position: fixed;
+    bottom: 20px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -102,15 +114,23 @@ img {
     margin-top: 30px;
     border: 1px solid #292929;
     padding: 0px;
-    border-radius: 8px;
+    border-radius: 6px;
     overflow: hidden
+}
+
+.main-image-frame img {
+    max-width: 100%;
+    max-height: 10%;
+    height: max-content;
+    display: block;
+    margin: 0 auto; /* Center the image within the frame */
 }
 
 .image-frame {
     max-width: 90%;
     max-height: 80px;
     margin: 0 auto; /* Center the frame on the page */
-    margin-top: 40px;
+    margin-top: 30px;
     border: 1px solid #292929;
     padding: 0px;
     border-radius: 8px;
