--- a/style.css
+++ b/style.css
@@ -120,6 +120,8 @@ img {
 
 .main-image-frame img {
     max-width: 100%;
+    max-height: 10%;
+    height: max-content;
     display: block;
     margin: 0 auto; /* Center the image within the frame */
 }
