--- a/style.css
+++ b/style.css
@@ -109,21 +109,18 @@ img {
 
 .main-image-frame {
     max-width: 90%;
-    max-height: 10%;
-    margin: 0 auto; /* Center the frame on the page */
+    margin: 0 auto;
     margin-top: 30px;
     border: 1px solid #292929;
-    padding: 0px;
     border-radius: 6px;
-    overflow: hidden
+    overflow: hidden;
 }
 
 .main-image-frame img {
     max-width: 100%;
-    max-height: 10%;
-    height: max-content;
+    height: auto; /* Let the browser determine the correct height */
     display: block;
-    margin: 0 auto; /* Center the image within the frame */
+    margin: 0 auto;
 }
 
 .image-frame {
