--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 body {
     text-align: center;
     color: var(--tg-theme-text-color);
-    /* background: var(--tg-theme-bg-color); */
-    background: red;
+    background: var(--tg-theme-bg-color);
+
 }
 
 h1 {
@@ -52,8 +52,8 @@ button {
     width: 90%;
     padding: 10px;
     margin: 5px;
-    /* background: var(--tg-theme-button-color);
-    color: var(--tg-theme-button-text-color); */
+    background: var(--tg-theme-button-color);
+    color: var(--tg-theme-button-text-color);
     border: none;
     border-radius: 4px;
     font-size: 18px;
@@ -84,8 +84,6 @@ button:hover {
     justify-content: center;
     align-items: center;
 }
-
-
 
 
 img {
