--- a/style.css
+++ b/style.css
@@ -102,24 +102,21 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(95vw * 4 / 3); /* Calculate height based on the aspect ratio */
     width: 95vw; /* 95% of the viewport width */
-    max-height: 85vh; /* Set maximum height to 85% of the viewport height */
+    height: calc(95vw * 5 / 3); /* Height is calculated based on width and 3:5 aspect ratio */
     margin: 0 auto; /* Center the container horizontally */
     border: 1px solid #bdbcbc;
-    padding: 0;
-    border-radius: 3px;
+    position: relative;
     overflow: hidden; /* Ensure the image does not overflow the container */
-    position: relative; /* Add relative positioning */
 }
 
 #imagefirst {
-    width: 100%; /* Set width to 100% of the container */
-    height: auto; /* Set height to auto to maintain aspect ratio */
-    position: absolute; /* Position the image absolutely */
-    top: 50%; /* Align the top of the image to the middle of the container */
-    left: 50%; /* Align the left of the image to the middle of the container */
-    transform: translate(-50%, -50%); /* Translate the image back by 50% of its own width and height */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensure the image covers the entire container */
 }
 
 
@@ -141,7 +138,7 @@ button:hover {
 
 }
 
-/* ________HUI ZNAET_____________ */
+/* ________HUI ZNAET___________ */
 
 .image-frame {
     max-width: 90%;
@@ -168,3 +165,31 @@ button:hover {
     width: 100%;
     height: auto;
 }
+
+
+/*
+3/4
+#preview {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(95vw * 4 / 3);
+    width: 95vw;
+    max-height: 85vh;
+    margin: 0 auto;
+    border: 1px solid #bdbcbc;
+    padding: 0;
+    border-radius: 3px;
+    overflow: hidden;
+    position: relative;
+}
+
+#imagefirst {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+} 
+*/
