--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ button:hover {
     justify-content: center;
     align-items: center;
     width: 95vw; /* 95% of the viewport width */
-    height: calc(95vw * 5 / 3); /* Height is calculated based on width and 3:5 aspect ratio */
+    height: calc(95vw * 3 / 2); /* Height is calculated based on width and 3:5 aspect ratio */
     margin: 0 auto; /* Center the container horizontally */
     border: 1px solid #bdbcbc;
     position: relative;
@@ -121,42 +121,50 @@ button:hover {
 
 
 /* ____________LOGO_________________ */
-
 .main-image-frame {
-    max-width: 90%;
-    margin: 0 auto; /* Center the frame on the page */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
     margin-top: 30px;
-    border: 1px solid #292929;
-    padding: 0px;
-    border-radius: 6px;
-    overflow: hidden
+    border: 1px outset #bdbcbc;
+    padding-top: 56.25%; /* 9/16 aspect ratio */
+    position: relative;
+    overflow: hidden;
 }
 
 .main-image-frame img {
-    max-width: 100%;
-    display: block;
-
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 /* ________HUI ZNAET___________ */
 
 .image-frame {
-    max-width: 90%;
-    max-height: 80px;
-    margin: 0 auto; /* Center the frame on the page */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
     margin-top: 30px;
-    border: 1px solid #292929;
-    padding: 0px;
-    border-radius: 8px;
-    overflow: hidden
+    border: 1px outset #bdbcbc;
+    padding-top: 25%; /* 1/4 aspect ratio */
+    position: relative;
+    overflow: hidden;
 }
 
 .image-frame img {
-    max-width: 100%;
-    max-height: 10%;
-    height: max-content;
-    display: block;
-    margin: 0 auto; /* Center the image within the frame */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 
