--- a/style.css
+++ b/style.css
@@ -87,9 +87,20 @@ button:hover {
 
 
 
+
+
+
+
+
+
+
+
+
 /* _____________CONTENT_________________  TODO: FIX */
 #contectimg {
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 90%;
     margin: 0 auto;
     margin-top: 20px;
@@ -100,10 +111,22 @@ button:hover {
 }
 
 #contectimg img {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: auto;
-    transition: transform 0.5s ease; /* Smooth transition */
+    height: 100%;
+    object-fit: contain;
+    transition: transform 0.3s ease; /* Smooth transition */
 }
+
+
+
+
+
+
+
+
 
 
 /* _____________PREVIEW____________________ */
