--- a/style.css
+++ b/style.css
@@ -201,11 +201,11 @@ button:hover {
 
 
 /* DO NOT FUCKING TOUCH!!! */
-.zoomable-image {
+/* .zoomable-image {
     width: 100%;
     height: auto;
     touch-action: none; /* Disable default touch actions */
-}
+
 
 
 /*
